# thesis

./: .gitignore  A_convResults.txt  A_res.txt  ConvergenceResults.f90  DetailedAnalysis.f90  EquilibriumCheck.f90  ImpulseResponse.f90  InfoExperiment_3.txt  InfoExperiment_4.txt  InfoExperiment_5.txt  LearningSimulation.f90  LearningTrajectory.f90  PI_routines.f90  QGapToMaximum.f90  QL_routines.f90  globals.f90  main.f90
compare/baseline/: A_convResults.txt  A_res.txt  InfoExperiment_02.txt  InfoExperiment_03.txt  InfoExperiment_04.txt  InfoExperiment_05.txt  InfoExperiment_06.txt  InfoExperiment_09.txt  InfoExperiment_1.txt  InfoExperiment_3.txt  InfoExperiment_4.txt
compare/cpp/: A_InputParameters.txt  A_res.txt  InfoExperiment_02.txt  InfoExperiment_07.txt  InfoExperiment_08.txt  InfoExperiment_10.txt
cpp conversion/: CMakeLists.txt  README.md
cpp conversion/include/: ConvergenceResults.hpp  DetailedAnalysis.hpp  EquilibriumCheck.hpp  ImpulseResponse.hpp  LearningSimulation.hpp  LearningTrajectory.hpp  PI_routines.hpp  QGapToMaximum.hpp  QL_routines.hpp  fortran_runtime.hpp  generic_routines.hpp  globals.hpp
cpp conversion/src/: ConvergenceResults.cpp  DetailedAnalysis.cpp  EquilibriumCheck.cpp  ImpulseResponse.cpp  LearningSimulation.cpp  LearningTrajectory.cpp  PI_routines.cpp  QGapToMaximum.cpp  QL_routines.cpp  fortran_runtime.cpp  generic_routines.cpp  globals.cpp  main.cpp
